[project]
name = "ml-test"
version = "0.1.0"
description = "cambiar configuraciones en una red neuronal y comprobar resultados"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow>=2.16.1",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]